--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=airBnb
 
 #DB configuration
 spring.datasource.url = jdbc:postgresql://localhost:5432/airBnb
-spring.jpa.hibernate.ddl.auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
+logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.datasource.password = 7981792487
