--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=airBnb
 
 #DB configuration
 spring.datasource.url = jdbc:postgresql://localhost:5432/airBnb
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.datasource.password = 7981792487
 spring.datasource.username = postgres
+
+server.servlet.context-path=/api/v1
