--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.username = postgres
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.servlet.context-path=/api/v1
+jwt.secretKey = ajflkjflkskjfljflsjflsjflsjfl1312312jnfnsdfknv
